<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/valoRed"
        app:cardCornerRadius="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/itemCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/valoDarkBlue"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/agentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/tungsten"
                    android:text="@string/namePlacehold"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageCardBorder"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.313" />

                <TextView
                    android:id="@+id/agentRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/bahnschrift"
                    android:text="@string/rolePLacehold"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/imageCardBorder"
                    app:layout_constraintTop_toBottomOf="@+id/agentName" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageCardBorder"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/valoRed"
                    app:cardCornerRadius="42.5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/imageCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="@color/valoDarkBlue"
                        app:cardCornerRadius="37.5dp">

                        <ImageView
                            android:id="@+id/agentImg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/portraitDesc"
                            app:srcCompat="@drawable/placeholder" />
                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/agentBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/transparent"
            style="?android:attr/borderlessButtonStyle"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>